style(Transactions): change overflow-y property to avoid scroll bar on some browsers

--- a/assets/css/modules/_layout.scss
+++ b/assets/css/modules/_layout.scss
@@ -73,7 +73,7 @@
 }
 
 .overflow-scroll {
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   height: 100%;
 }
 
